envoy.yaml
static_resources:
  listeners:
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
      - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              codec_type: AUTO
              route_config:
                name: local_routes
                virtual_hosts:
                  - name: local_service
                    domains:
                      - "*"
                    routes:
                      - match:
                          prefix: "/"
                        direct_response:
                          status: 200
                          body:
                            inline_string: "Project: github.com/troydai/envoy-filter-wasm-filter"
              http_filters:
                # - name: envoy.filters.http.wasm
                #   typed_config:
                #     "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                #     type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                #     value:
                #       config:
                #         name: "http_headers"
                #         vm_config:
                #           runtime: "envoy.wasm.runtime.v8"
                #           code:
                #             local:
                #               filename: "/etc/envoy/proxy-wasm-plugins/proxy_wasm_example_http_headers.wasm"
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
